Moved status bar below the ace editor to avoid covering the last line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -916,9 +916,9 @@ article {
 
 .status {
   background: #333333;
-  bottom: 1px;
+  bottom: 0;
   height: 21px;
-  left: 47px;
+  left: 0;
   position: absolute;
   right: 0; }
   .status p {
@@ -939,7 +939,7 @@ article {
   border: 1px solid #adadad;
   min-height: 200px;
   overflow: auto;
-  padding: 0; }
+  padding: 0 0 21px; }
 
 .sticky .post-content {
   background-image: url("../img/sticky.png?ver=1.0");
